[package]
name = "pmux"
version = "0.1.0"
authors = ["Yushi OMOTE <yushiomote@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7"
structopt = "0.3"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "0.5"
byteorder = "1.3"